--- a/Lab10/Lab10.vcxproj.filters
+++ b/Lab10/Lab10.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="hashTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Part.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hashTable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Part.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
