FIX removeItem - it's collision handling
added an exception class

--- a/Lab10/Lab10.vcxproj
+++ b/Lab10/Lab10.vcxproj
@@ -19,10 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Exception.h" />
     <ClInclude Include="hashTable.h" />
     <ClInclude Include="Part.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Exception.cpp" />
     <ClCompile Include="hashTable.cpp" />
     <ClCompile Include="Part.cpp" />
     <ClCompile Include="Source.cpp" />
