--- a/Lab10/Lab10.vcxproj
+++ b/Lab10/Lab10.vcxproj
@@ -19,13 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Homework4\HW4\BST.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="hashTable.h" />
+    <ClInclude Include="hashTableChain.h" />
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Part.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Homework4\HW4\BST.cpp" />
     <ClCompile Include="Exception.cpp" />
     <ClCompile Include="hashTable.cpp" />
+    <ClCompile Include="hashTableChain.cpp" />
+    <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="Part.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
